--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -1,7 +1,9 @@
 main {
   .card {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-      rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    box-shadow:
+      rgba(0, 0, 0, 0.25) 0 14px 28px,
+      rgba(0, 0, 0, 0.22) 0 10px 10px;
+
     .card-img-top {
       height: 270px;
     }
