--- a/src/scss/layout/_reservation.scss
+++ b/src/scss/layout/_reservation.scss
@@ -1,17 +1,18 @@
-input ,button{
-    margin: 15px 0px;
-    width: 60%;
+input,
+button {
+  margin: 15px 0;
+  width: 60%;
 }
 
 .close {
-    top: 55px;
-    right: 9px;
+  top: 55px;
+  right: 9px;
 }
 
 .modal-reservation {
-    background-color: black;
+  background-color: black;
 }
 
 .holder {
-    background-color: white;
+  background-color: white;
 }
