Display reservation modal with selected items

--- a/src/scss/layout/_reservation.scss
+++ b/src/scss/layout/_reservation.scss
@@ -1,16 +1,18 @@
 input,
 button {
   margin: 15px 0;
-  width: 60%;
 }
 
 .close {
+  position: relative;
   top: 55px;
   right: 9px;
 }
 
 .modal-reservation {
   background-color: black;
+  max-height: 100vh;
+  position: absolute;
 }
 
 .holder {
