--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -1,8 +1,14 @@
+header {
+  nav {
+    .navbar-brand {
+      color: #e6d9d9 !important;
+    }
+  }
+}
+
 main {
   .card {
-    box-shadow:
-      rgba(0, 0, 0, 0.25) 0 14px 28px,
-      rgba(0, 0, 0, 0.22) 0 10px 10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px, rgba(0, 0, 0, 0.22) 0 10px 10px;
 
     .card-img-top {
       height: 270px;
