Fix linters & Change readme & Refactor comment count & Add style

--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -3,6 +3,10 @@ header {
     .navbar-brand {
       color: #e6d9d9 !important;
     }
+
+    a {
+      cursor: pointer;
+    }
   }
 }
 
@@ -33,4 +37,12 @@ main {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.backdrop {
+  backdrop-filter: blur(7px);
+}
+
+.overflow-hidden-body {
+  overflow-y: hidden;
 }
